# rmcp-openapi

./: .gitignore  .gitlab-ci.yml  .releaserc.json  .typos.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  justfile  renovate.json
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh  firewall-allowlist.txt  firewall.sh
.gitlab/ci/: common.gitlab-ci.yml  devcontainer.gitlab-ci.yml  images.gitlab-ci.yml  rust.gitlab-ci.yml  semantic-release.gitlab-ci.yml
container/: Containerfile
crates/rmcp-openapi/: Cargo.toml
crates/rmcp-openapi-server/: Cargo.toml
crates/rmcp-openapi-server/src/: cli.rs  config.rs  configuration.rs  main.rs  spec_loader.rs
crates/rmcp-openapi/src/: error.rs  filter.rs  http_client.rs  lib.rs  server.rs  spec.rs  tool_generator.rs  tool_registry.rs  transformer.rs
crates/rmcp-openapi/src/config/: authorization.rs  mod.rs
crates/rmcp-openapi/src/security/: mod.rs  observer.rs
crates/rmcp-openapi/src/snapshots/: rmcp_openapi__error__tests__error_response_serialization.snap  rmcp_openapi__error__tests__tool_call_error_http_error.snap  rmcp_openapi__error__tests__tool_call_error_http_request.snap  rmcp_openapi__error__tests__tool_call_error_json.snap  rmcp_openapi__error__tests__tool_call_error_multiple_suggestions.snap  rmcp_openapi__error__tests__tool_call_error_no_suggestions.snap  rmcp_openapi__error__tests__tool_call_error_request_construction.snap  rmcp_openapi__error__tests__tool_call_error_serialization_with_details.snap  rmcp_openapi__error__tests__tool_call_error_serialization_with_suggestions.snap  rmcp_openapi__error__tests__tool_call_error_serialization_without_details.snap  rmcp_openapi__error__tests__tool_call_error_validation.snap  rmcp_openapi__error__tests__tool_call_error_validation_const.snap  rmcp_openapi__error__tests__tool_call_error_validation_detailed.snap  rmcp_openapi__error__tests__tool_call_error_validation_enum.snap  rmcp_openapi__error__tests__tool_call_error_validation_format.snap  rmcp_openapi__error__tests__tool_call_error_validation_max_items.snap  rmcp_openapi__error__tests__tool_call_error_validation_max_properties.snap  rmcp_openapi__error__tests__tool_call_error_validation_min_items.snap  rmcp_openapi__error__tests__tool_call_error_validation_min_properties.snap  rmcp_openapi__error__tests__tool_call_error_validation_multiple_of.snap  rmcp_openapi__error__tests__tool_call_error_validation_unique_items.snap  rmcp_openapi__server__tests__create_structured_error_content_http_errors-2.snap  rmcp_openapi__server__tests__create_structured_error_content_invalid_parameter.snap  rmcp_openapi__server__tests__create_structured_error_content_tool_not_found.snap  rmcp_openapi__server__tests__tool_not_found_error_with_suggestions.snap  rmcp_openapi__server__tests__validation_error_converted_to_error_data.snap  rmcp_openapi__tool_generator__tests__array_parameter_examples_lift.snap  rmcp_openapi__tool_generator__tests__error_schema_structure.snap  rmcp_openapi__tool_generator__tests__extract_output_schema_with_200_response.snap  rmcp_openapi__tool_generator__tests__extract_output_schema_with_201_response.snap  rmcp_openapi__tool_generator__tests__extract_output_schema_with_2xx_response.snap  rmcp_openapi__tool_generator__tests__extract_output_schema_with_ref.snap  rmcp_openapi__tool_generator__tests__petstore_add_pet.snap  rmcp_openapi__tool_generator__tests__petstore_find_pets_by_status.snap  rmcp_openapi__tool_generator__tests__petstore_get_pet_by_id.snap  rmcp_openapi__tool_generator__tests__test_array_with_prefix_items_integration.snap  rmcp_openapi__tool_generator__tests__test_array_with_regular_items_schema.snap  rmcp_openapi__tool_generator__tests__test_convert_prefix_items_to_draft07_mixed_types.snap  rmcp_openapi__tool_generator__tests__test_convert_prefix_items_to_draft07_uniform_types.snap  rmcp_openapi__tool_generator__tests__test_generate_tool_metadata_includes_output_schema.snap  (+17 more)
crates/rmcp-openapi/src/tool/: metadata.rs  mod.rs  tool_collection.rs
crates/rmcp-openapi/tests/: test_error_scenarios.rs  test_http_integration.rs  test_image_responses.rs  test_tool_filter.rs  test_with_js.rs  test_with_python.rs
crates/rmcp-openapi/tests/assets/: petstore-openapi-norefs.json
crates/rmcp-openapi/tests/common/: mock_server.rs  openapi_server.rs
crates/rmcp-openapi/tests/snapshots/: test_error_scenarios__array_type_validation_error.snap  test_error_scenarios__enum_validation_error.snap  test_error_scenarios__http_400_bad_request_error.snap  test_error_scenarios__integer_for_string_validation_error.snap  test_error_scenarios__null_value_for_optional_parameter.snap  test_error_scenarios__null_value_for_required_parameter.snap  test_error_scenarios__tool_not_found_multiple_suggestions.snap  test_error_scenarios__tool_not_found_with_suggestions.snap  test_error_scenarios__type_validation_error.snap  test_with_js__js_sse_client_responses_with_refs.snap  test_with_js__js_streamable_http_client_responses.snap  test_with_js__js_streamable_http_client_responses_with_refs.snap  test_with_js__sse_tests__js_sse_client_responses.snap  test_with_python__python_sse_client_responses.snap  test_with_python__sse_tests__python_sse_client_responses.snap  test_with_python__sse_tests__python_sse_client_responses_with_refs.snap
crates/rmcp-openapi/tests/test_with_js/: client.js  package.json  streamable_client.js
crates/rmcp-openapi/tests/test_with_python/: .gitignore
crates/rmcp-openapi/tests/test_with_python/test_with_python.egg-info/: SOURCES.txt
examples/: petstore.sh
src/: cli.rs  config.rs  error.rs  http_client.rs  lib.rs  main.rs  openapi.rs  openapi_legacy.rs  openapi_spec.rs  openapi_to_tool.rs  server.rs  spec_location.rs  tool_generator.rs  tool_registry.rs
src/snapshots/: rmcp_openapi__error__tests__error_response_serialization.snap  (+42 more)
src/tool/: metadata.rs  mod.rs  (+1 more)
tests/: test_error_scenarios.rs  test_http_integration.rs  test_with_js.rs  test_with_python.rs
tests/test_with_python/: client.py  pyproject.toml
tests/test_with_python/test_with_python.egg-info/: PKG-INFO  requires.txt
(+25 files in other folders)
