[workspace]
members = ["crates/rmcp-openapi", "crates/rmcp-openapi-server"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://gitlab.com/lx-industries/rmcp-openapi"
homepage = "https://gitlab.com/lx-industries/rmcp-openapi"
keywords = ["mcp", "openapi", "llm"]
categories = ["network-programming", "web-programming"]

[workspace.dependencies]
# Shared dependencies
actix-web = "4.9.0"
rmcp = { version = "0.11.0", default-features = false, features = ["server", "base64", "macros", "transport-streamable-http-server", "transport-streamable-http-server-session", "transport-worker"] }
rmcp-actix-web = { version = "0.9.0", default-features = false, features = ["transport-streamable-http"] }
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "charset", "system-proxy", "rustls-tls", "rustls-tls-native-roots"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "2.0"
url = "2.5.4"
tracing = "0.1"
http = "1.3.1"
tokio = { version = "1.0", default-features = false, features = [
    "fs",
    "process",
    "time",
] }
