[package]
name = "rmcp-openapi-server"
description = "MCP server executable for OpenAPI specifications"
readme = "../../README.md"
version = "0.11.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "rmcp-openapi-server"
path = "src/main.rs"

[dependencies]
# Library dependency
rmcp-openapi = { version = "0.11.0", path = "../rmcp-openapi" }

# Server-specific dependencies
actix-web.workspace = true
rmcp.workspace = true
rmcp-actix-web.workspace = true
clap = { version = "4.5.41", features = ["derive"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
reqwest.workspace = true
http.workspace = true
serde_json.workspace = true
bon = "3.7"

[dev-dependencies]
rmcp = { workspace = true, features = [
    "server",
    "transport-sse-server",
    "transport-child-process",
    "transport-streamable-http-server",
] }
insta = { version = "1.43.1", features = ["json"] }
anyhow = "1.0"
tokio-util = "0.7"
mockito = "1.7.0"
