[package]
name = "rmcp-openapi-server"
description = "MCP server executable for OpenAPI specifications"
readme = "../../README.md"
version = "0.20.7"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "rmcp-openapi-server"
path = "src/main.rs"

[features]
default = ["rustls-tls"]
authorization-token-passthrough = ["rmcp-openapi/authorization-token-passthrough"]
rustls-tls = ["rmcp-openapi/rustls-tls"]
native-tls = ["rmcp-openapi/native-tls"]

[dependencies]
# Library dependency
rmcp-openapi = { version = "0.20.7", path = "../rmcp-openapi" }

# Server-specific dependencies
actix-web.workspace = true
rmcp = { workspace = true, default-features = false }
rmcp-actix-web = { workspace = true, default-features = false, features = ["transport-streamable-http"] }
clap = { version = "4.5.41", features = ["derive", "env"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
reqwest.workspace = true
http.workspace = true
serde_json.workspace = true
bon = "3.7"

[dev-dependencies]
rmcp = { workspace = true, features = [
    "server",
    "transport-streamable-http-server",
] }
insta = { version = "1.43.1", features = ["json"] }
anyhow = "1.0"
tokio-util = "0.7"
mockito = "1.7.0"
