[package]
name = "rmcp-openapi"
description = "Library for converting OpenAPI specifications to MCP tools"
readme = "../../README.md"
version = "0.9.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "rmcp_openapi"
path = "src/lib.rs"

[dependencies]
rmcp = { workspace = true, features = ["server"] }
reqwest.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
schemars = "1.0.4"
thiserror.workspace = true
tokio.workspace = true
regex = "1.0"
oas3 = "0.19.0"
indexmap = "2.0"
mime = "0.3.17"
url.workspace = true
tracing.workspace = true
strsim = "0.11.1"
http.workspace = true
bon = "3.7"
jsonschema = "0.33.0"
heck = "0.5.0"

[dev-dependencies]
rmcp = { workspace = true, features = [
    "server",
    "client",
    "transport-sse-server",
    "transport-child-process",
    "transport-streamable-http-server",
] }
insta = { version = "1.43.1", features = ["json"] }
anyhow = "1.0"
tokio-util = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8", features = [] }
mockito = "1.7.0"
