[package]
name = "rmcp-openapi"
description = "Library for converting OpenAPI specifications to MCP tools"
readme = "../../README.md"
version = "0.24.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "rmcp_openapi"
path = "src/lib.rs"

[dependencies]
rmcp = { workspace = true, default-features = false }
rmcp-actix-web = { workspace = true, default-features = false, features = ["transport-streamable-http"] }
reqwest.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
schemars = "1.0.4"
thiserror.workspace = true
regex = "1.0"
oas3 = "0.20.0"
indexmap = "2.0"
mime = "0.3.17"
url.workspace = true
tracing.workspace = true
strsim = "0.11.1"
async-trait = "0.1"
http.workspace = true
bon = "3.7"
jsonschema = "0.40.0"
heck = "0.5.0"
base64 = "0.22"

[dev-dependencies]
actix-web.workspace = true
rmcp = { workspace = true, features = [
    "server",
    "client",
    "transport-streamable-http-server",
] }
insta = { version = "1.43.1", features = ["json"] }
anyhow = "1.0"
tokio-util = "0.7"
tokio.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8", features = [] }
mockito = "1.7.0"

[features]
default = []
# Enable this if your MCP service will forward tokens to upstream APIs (non-compliant).
# This violates MCP specifications but may be necessary for proxy architectures.
# See SECURITY.md for important security implications.
authorization-token-passthrough = [
    "rmcp-actix-web/authorization-token-passthrough",
]
